# Speedup-Thingy

./: .gitignore  PROJECT_AUDIT.md  README.md  kernels.md  pyproject.toml
benchmarks/: benchmark_kernels.py  convergence_compare.py  proof_compare.py  speed_audit.py  time_to_quality.py
configs/: large.yaml  medium.yaml  medium_mac_real_1m.yaml  medium_mac_real_clamped4_8_cheap_audit.yaml  medium_mac_real_clamped4_8_lrdecay_phi.yaml  medium_mac_real_fixed_depth4_proof.yaml  medium_mac_real_hotpath.yaml  medium_mac_real_speed.yaml  proof_filter_depth16_exact_teacher.yaml  proof_filter_depth4_dense.yaml  proof_filter_depth4_exact_teacher.yaml  proof_filter_depth4_factorized_soft.yaml  proof_filter_depth4_lowrank_dense_distill.yaml  proof_filter_depth4_macro_aligned_audit_schedule.yaml  proof_filter_depth4_macro_aligned_frozen_teacher.yaml  proof_filter_depth4_macro_aligned_fullaudit.yaml  proof_filter_depth4_macro_distill.yaml  proof_filter_depth4_macro_distill_v2.yaml  proof_filter_depth4_macro_noaudit.yaml  proof_filter_depth4_route_em.yaml  proof_filter_depth4_sandwich_supernet.yaml  proof_filter_depth8_dense.yaml  proof_filter_depth8_exact_teacher.yaml  proof_filter_depth8_macro_aligned_audit_schedule.yaml  proof_filter_depth8_macro_aligned_fullaudit.yaml  proof_filter_depth8_macro_distill.yaml  proof_filter_depth8_macro_noaudit.yaml  small.yaml  small_mac_real_speed.yaml  tiny.yaml  tiny_mac_fused.yaml  tiny_mac_real_audit.yaml  tiny_mac_real_speed.yaml
docs/: commands.md  design.md
notebooks/: cuda_attention_diagnostics_fixed_ffn.ipynb  eval_junk.txt  output.txt  (+11 more)
(+93 files in other folders)
